Version 0.3
 Add obd2csv
 obdgpslogger, samplerate [-a] now works
 time inserted as a real rather than an integer for sub-second usefulness

Version 0.2 (released 2008-03-24)
 Change obdlogger binary to obdgpslogger
 CMake sniglets to make it more fink-friendly

Version 0.1 (released 2008-03-23)
 Initial Release